:lipstick: badges atualizadas

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,8 @@ knitr::opts_chunk$set(
 # Pacote Bíblias
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/damarals/biblias/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/damarals/biblias/actions/workflows/R-CMD-check.yaml)
-[![GitHub latest commit](https://badgen.net/github/last-commit/damarals/biblias)](https://GitHub.com/damarals/biblias/commit/)
+[![R-CMD-check](https://img.shields.io/github/workflow/status/damarals/biblias/R-CMD-check?style=for-the-badge)](https://github.com/damarals/biblias/actions/workflows/R-CMD-check.yaml)
+[![GitHub latest commit](https://img.shields.io/github/last-commit/damarals/biblias?color=blue&label=atualizado&style=for-the-badge)](https://GitHub.com/damarals/biblias/commit/)
 <!-- badges: end -->
 
 O objetivo deste pacote é disponibilizar várias biblias em português e em diferentes formatos:
